Update binary class files and modify testng.xml for correct package references
- Updated binary class files for BaseTest, TestSuiteSetup, WikipediaSearchTest, DeviceHelper, and TestListener.
- Changed package references in testng.xml from 'com.example' to 'com.WikiDemo' for TestSuiteSetup and WikipediaSearchTest classes.